bug: fixed non visible css selectors The selectors for the css were corrected

--- a/foundations/intro-to-css/01-css-methods/style.css
+++ b/foundations/intro-to-css/01-css-methods/style.css
@@ -1,4 +1,4 @@
-.div{
+div{
     background-color: red;
     color: white;
     font-size: 32px;
